--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 body {
     display: flex;
     flex-direction: column;
@@ -57,7 +58,7 @@ body {
 .snake {
     width: 20px;
     height: 20px;
-    background-color: chartreuse;
+    background-color: rgb(62, 206, 206);
     position: absolute;
     border-radius: 5px;
 }
